fix few layout issues

--- a/frontend-jquery/public/styles/register.css
+++ b/frontend-jquery/public/styles/register.css
@@ -1,12 +1,7 @@
 .root {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   padding-top: 40px;
-  padding-bottom: 40px;
 }
-
+/* 
 .form-signin {
   display: flex;
   flex-direction: column;
@@ -30,4 +25,4 @@
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-}
+} */
